# starbunk-rs

./: .clippy.toml  .env.example  .gitignore  .gitmessage  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  deploy_config.sh  deploy_k8s.sh  docker-compose.yml  list_models.sh  proxyclass-autopilot.yaml  proxyclass_crd.yaml  tailscale-proxy.yaml  test_gemini.sh  test_google.sh  test_google_embed.sh  test_schema.rs  update_google_client.sh
.agents/commands/: add-bot.md  check.md  deploy.md  docker.md  lint.md  review-pr-comments.md
.agents/skills/ci-diagnose/: SKILL.md
.agents/skills/enrich-observability/: SKILL.md
.agents/skills/pr-comment-review/: SKILL.md
.agents/skills/pr-create/: SKILL.md
.agents/skills/pr-start/: SKILL.md
.claude/: settings.json
.claude/agents/: architect.md  debugger.md  devops.md  pm.md  rust-craftsman.md  task-runner.md
.claude/commands/: git-workflow.md  health-check.md  logs.md  rust-standards.md  task.md  test.md  worktree.md
.gemini/agents/: the-artist.md  the-brains.md  the-builder.md  the-consultant.md  the-critic.md  the-face.md  the-fixer.md  the-inspector.md  the-mechanic.md  the-painter.md
.gemini/commands/: build.md  ci-diagnose.md  git-workflow.md  triage-issues.md
.gemini/skills/add-bot/: SKILL.md
.gemini/skills/address-pr-comments/: SKILL.md
.gemini/skills/architect/: SKILL.md
.gemini/skills/cartel/: SKILL.md
.gemini/skills/check/: SKILL.md
.gemini/skills/ci-remediation/: SKILL.md
.gemini/skills/collaborate-sdlc/: SKILL.md
.gemini/skills/debugger/: SKILL.md
.gemini/skills/deploy/: SKILL.md
.gemini/skills/devops/: SKILL.md
.gemini/skills/docker/: SKILL.md
.gemini/skills/git-workflow/: SKILL.md
.gemini/skills/health-check/: SKILL.md
.gemini/skills/kubernetes-deploy/: SKILL.md
.gemini/skills/lint/: SKILL.md
.gemini/skills/logs/: SKILL.md
.gemini/skills/pm/: SKILL.md
.gemini/skills/repo-audit/: SKILL.md
.gemini/skills/review/: SKILL.md
.gemini/skills/rust-craftsman/: SKILL.md
.gemini/skills/task-runner/: SKILL.md
.gemini/skills/tdd-pair-programming/: SKILL.md
.gemini/skills/test/: SKILL.md
.gemini/skills/triage-issues/: SKILL.md
.gemini/skills/worktree/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml  health-check.yml  main.yml  release.yml
config/bunkbot/: botbot.yml
config/covabot/: god_prompt.yml
crates/bluebot/: Cargo.toml
crates/bluebot/src/: lib.rs  main.rs  strategy.rs
crates/bluebot/src/strategy/: blue_match.rs  confirm_enemy.rs  reply_confirm.rs  request_confirm.rs  request_enemy.rs  state.rs
crates/bunkbot/: Cargo.toml
crates/bunkbot/src/: api.rs  commands.rs  config.rs  engine.rs  lib.rs  main.rs  state.rs  store.rs  template.rs
crates/bunkbot/src/commands/: bot.rs  clearwebhooks.rs  ping.rs
crates/bunkbot/src/config/: tests.rs
crates/bunkbot/src/engine/: compiled.rs
crates/covabot/: Cargo.toml
crates/covabot/src/: conversation.rs  engagement.rs  lib.rs  main.rs  personality.rs  store.rs  tagger.rs
crates/djcova/: Cargo.toml
crates/djcova/src/: api.rs  commands.rs  gif_client.rs  lib.rs  main.rs  manager.rs  voice.rs
crates/djcova/src/commands/: buttons.rs  clear.rs  help.rs  history.rs  nowplaying.rs  pause.rs  play.rs  queue.rs  repeat.rs  shared.rs  shuffle.rs  skip.rs  skiplast.rs  skipnext.rs  stop.rs  volume.rs
crates/e2e/: Cargo.toml
crates/e2e/src/: main.rs
crates/e2e/suites/: bunkbot.json  bunkbot_bluebot.json  covabot.json  djcova.json  health_djcova.json  ratbot.json
crates/ratbot/: Cargo.toml
crates/ratbot/src/: assignment.rs  bot.rs  commands.rs  interaction.rs  lib.rs  main.rs  routing.rs  store.rs
crates/starbunk/: Cargo.toml
crates/starbunk-shared/: Cargo.toml
crates/starbunk-shared/src/: lib.rs  memory.rs  telemetry.rs
crates/starbunk-shared/src/llm/: client_anthropic.rs  mod.rs
crates/starbunk-shared/src/llm/client/: anthropic.rs  google.rs  ollama.rs  openai.rs
crates/starbunk-shared/src/middleware/: author.rs  context.rs  mod.rs
crates/starbunk-shared/src/replybot/: bot.rs
crates/starbunk/src/: api.rs  audit.rs  discord.rs  health.rs  lib.rs  middleware.rs  replybot.rs  telemetry.rs  utils.rs
crates/starbunk/src/discord/: e2e.rs  identity.rs  mod.rs  webhook_service.rs
crates/starbunk/src/llm/: config.rs  mod.rs  models.rs  service.rs
crates/starbunk/src/llm/client/: anthropic.rs  google.rs  google.rs.patch  mod.rs  openai.rs
crates/starbunk/src/memory/: pg_store.rs
crates/starbunk/src/middleware/: content.rs  random.rs
crates/starbunk/src/replybot/: bot.rs
docker/: Dockerfile  docker-compose.e2e.yml  docker-compose.yml
kubernetes/: bluebot.yaml  bunkbot-configs.yaml  bunkbot.yaml  covabot-configs.yaml  covabot.yaml  djcova.yaml  namespace.yaml  otel-collector.yaml  postgres.yaml  ratbot.yaml  starbunk-ui.yaml  tailscale-proxy.yaml
observability/: loki.yaml  otel-collector.yaml  prometheus.yml  tempo.yaml
observability/alloy/: config.alloy
scripts/: cleanup-worktrees.sh  deploy_config.sh  deploy_k8s.sh  devops-validate.sh  install-hooks.sh  pre-commit.sh  restart_bots.sh
scripts/deployment/: deploy.sh  health-check.sh
scripts/git/hooks/: commit-msg  post-merge  pre-commit
src/: lib.rs  main.rs
src/bots/: mod.rs
src/bots/bluebot/: CLAUDE.md  mod.rs  strategy.rs
src/bots/bunkbot/: CLAUDE.md  mod.rs
src/covabot/: conversation.rs  mod.rs  tagger.rs
src/llm/: client_google.rs  client_openai.rs
src/memory/: pg_store.rs
src/middleware/: context.rs
src/replybot/: bot.rs  strategy.rs
src/shared/: mod.rs
starbunk-ui/: Dockerfile  next.config.ts  package-lock.json  package.json
starbunk-ui/src/: middleware.ts
wiki/: Changelog.md  Home.md  Versioning.md
wiki/agents/: Agents.md
wiki/bots/: BlueBot.md  BunkBot-Port-Plan.md  BunkBot.md  CovaBot-Design.md  CovaBot.md  DJCova.md  RatBot.md
wiki/development/: CI-CD.md  DJCOVA.md  Getting-Started.md  MessageFiltering.md  Observability.md  RATMAS.md  TDD.md  Testing.md
wiki/infrastructure/: Architecture.md  Configuration.md  Deployment.md  UI.md
(+49 files in other folders)
