[workspace]
members = [
    "crates/starbunk-shared",
    "crates/bluebot",
    "crates/bunkbot",
    "crates/covabot",
    "crates/djcova",
    "crates/ratbot",
]
resolver = "2"

[workspace.package]
version = "2026.0.1"
edition = "2021"

[workspace.dependencies]
starbunk-shared = { path = "crates/starbunk-shared" }

serenity           = { version = "0.12", features = ["client", "gateway", "model", "http", "rustls_backend", "cache"] }
tokio              = { version = "1",    features = ["rt-multi-thread", "macros", "sync", "time"] }
async-trait        = "0.1"
serde              = { version = "1",    features = ["derive"] }
serde_json         = "1"
reqwest            = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
regex              = "1"
tracing                        = "0.1"
tracing-subscriber             = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-opentelemetry          = "0.28"
opentelemetry                  = { version = "0.27", features = ["metrics", "logs"] }
opentelemetry_sdk              = { version = "0.27", features = ["rt-tokio", "logs", "metrics"] }
opentelemetry-otlp             = { version = "0.27", features = ["grpc-tonic", "logs", "metrics"] }
opentelemetry-appender-tracing = { version = "0.27" }
rand                           = "0.8"
anyhow             = "1"
chrono             = "0.4"
sqlx               = { version = "0.9", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
pgvector           = { version = "0.4", features = ["sqlx"] }
