[workspace]
members = [
    "crates/starbunk",
    "crates/bluebot",
    "crates/bunkbot",
    "crates/covabot",
    "crates/djcova",
    "crates/ratbot",
    "crates/e2e",
]
resolver = "2"

[workspace.package]
version = "2026.0.1"
edition = "2021"

[workspace.dependencies]
starbunk = { path = "crates/starbunk" }

serenity           = { version = "0.12", features = ["client", "gateway", "model", "http", "rustls_backend", "cache"] }
songbird           = { version = "0.6.0", features = ["gateway", "rustls", "serenity", "driver", "builtin-queue"] }
symphonia          = { version = "0.5.5", features = ["aac", "alac", "flac", "mpa", "vorbis", "pcm", "mkv", "ogg", "wav", "isomp4"] }
tokio              = { version = "1",    features = ["rt-multi-thread", "macros", "sync", "time"] }
async-trait        = "0.1"
serde              = { version = "1",    features = ["derive"] }
serde_json         = "1"
reqwest            = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
regex              = "1"
tracing                        = "0.1"
tracing-subscriber             = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-opentelemetry          = "0.28"
opentelemetry                  = { version = "0.27", features = ["metrics", "logs"] }
opentelemetry_sdk              = { version = "0.27", features = ["rt-tokio", "logs", "metrics"] }
opentelemetry-otlp             = { version = "0.27", features = ["grpc-tonic", "logs", "metrics"] }
opentelemetry-appender-tracing = { version = "0.27" }
rand                           = "0.8"
serde_yaml                     = "0.9"
anyhow             = "1"
chrono             = "0.4"
sqlx               = { version = "0.9", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
pgvector           = { version = "0.4", features = ["sqlx"] }
axum               = "0.7"
tower-http         = { version = "0.5", features = ["cors", "trace"] }
tower              = { version = "0.4", features = ["util"] }
