[package]
name    = "bluebot"
version.workspace = true
edition.workspace = true

[lib]
name = "bluebot"
path = "src/lib.rs"

[[bin]]
name = "bluebot"
path = "src/main.rs"

[dependencies]
starbunk-shared.workspace = true
serenity.workspace        = true
tokio.workspace           = true
async-trait.workspace     = true
anyhow.workspace          = true
tracing.workspace         = true
tracing-subscriber.workspace = true
regex.workspace           = true

[dev-dependencies]
serde_json.workspace = true
