[package]
name    = "bunkbot"
version.workspace = true
edition.workspace = true

[lib]
name = "bunkbot"
path = "src/lib.rs"

[[bin]]
name = "bunkbot"
path = "src/main.rs"

[dependencies]
starbunk.workspace           = true
serenity.workspace           = true
tokio.workspace              = true
async-trait.workspace        = true
anyhow.workspace             = true
tracing.workspace            = true
opentelemetry.workspace      = true
sqlx.workspace               = true
axum.workspace               = true
tower.workspace              = true
serde.workspace              = true
serde_yaml.workspace         = true
rand.workspace               = true
regex.workspace              = true
chrono.workspace             = true

[dev-dependencies]
http-body-util = "0.1.4"
serde_json.workspace         = true
