[package]
name    = "covabot"
version.workspace = true
edition.workspace = true

[lib]
name = "covabot"
path = "src/lib.rs"

[[bin]]
name = "covabot"
path = "src/main.rs"

[dependencies]
starbunk-shared.workspace    = true
serenity.workspace           = true
tokio.workspace              = true
async-trait.workspace        = true
anyhow.workspace             = true
tracing.workspace            = true
tracing-subscriber.workspace = true
serde.workspace              = true
serde_json.workspace         = true
rand.workspace               = true
