[package]
name    = "covabot"
version.workspace = true
edition.workspace = true

[lib]
name = "covabot"
path = "src/lib.rs"

[[bin]]
name = "covabot"
path = "src/main.rs"

[dependencies]
starbunk.workspace           = true
serenity.workspace           = true
tokio.workspace              = true
async-trait.workspace        = true
anyhow.workspace             = true
tracing.workspace            = true
opentelemetry.workspace      = true
sqlx.workspace               = true
axum.workspace               = true
tower.workspace              = true
serde.workspace              = true
serde_json.workspace         = true
rand.workspace               = true
serde_yaml.workspace = true
schemars = "1.2.1"
