[package]
name    = "djcova"
version.workspace = true
edition.workspace = true

[lib]
name = "djcova"
path = "src/lib.rs"

[[bin]]
name = "djcova"
path = "src/main.rs"

[dependencies]
starbunk.workspace           = true
serenity.workspace           = true
songbird.workspace           = true
symphonia.workspace          = true
reqwest.workspace            = true
rand.workspace               = true
serde.workspace              = true
tokio.workspace              = true
async-trait.workspace        = true
anyhow.workspace             = true
tracing.workspace            = true
opentelemetry.workspace      = true
axum.workspace               = true
tower.workspace              = true

[dev-dependencies]
symphonia.workspace          = true
