[package]
name    = "ratbot"
version.workspace = true
edition.workspace = true

[lib]
name = "ratbot"
path = "src/lib.rs"

[[bin]]
name = "ratbot"
path = "src/main.rs"

[dependencies]
starbunk-shared.workspace    = true
serenity.workspace           = true
tokio.workspace              = true
async-trait.workspace        = true
anyhow.workspace             = true
tracing.workspace            = true
tracing-subscriber.workspace = true
