[package]
name    = "starbunk"
version.workspace = true
edition.workspace = true

[lib]
name = "starbunk"

[dependencies]
serenity.workspace     = true
tokio.workspace        = true
async-trait.workspace  = true
serde.workspace        = true
serde_json.workspace   = true
reqwest.workspace      = true
regex.workspace        = true
tracing.workspace                        = true
tracing-subscriber.workspace             = true
tracing-opentelemetry.workspace          = true
opentelemetry.workspace                  = true
opentelemetry_sdk.workspace              = true
opentelemetry-otlp.workspace             = true
opentelemetry-appender-tracing.workspace = true
rand.workspace                           = true
anyhow.workspace       = true
chrono.workspace       = true
sqlx.workspace         = true
pgvector.workspace     = true
axum.workspace         = true
tower-http.workspace   = true
schemars = "1.2.1"
